<resources>
    <string name="app_name">Bin List</string>
    <string name="scheme_network">SCHEME / NETWORK</string>
    <string name="brand">BRAND</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="length">LENGTH</string>
    <string name="luhn">LUHN</string>
    <string name="type">TYPE</string>
    <string name="prepaid">PREPAID</string>
    <string name="country">COUNTRY</string>
    <string name="coordinates">(latitude: %d, longitude: %d)</string>
    <string name="bank">BANK</string>
    <string name="bank_and_city">%s, %s</string>
    <string name="no_connection">No connection</string>
    <string name="card_not_found">Card not found</string>
    <string name="error">Error: %s</string>
</resources>